Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-06-27 Kimmo
 PATCH: [ 1512708 ] Fix compile with VS2005
  Also additional cleanup for CCrystalTextView::GetMarginWidth()
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h

2006-06-26 Kimmo
 PATCH: [ 1510596 ] Updated Readme-Swedish.txt
  Submitted by Hans Eriksson
  Docs/Users/Languages: ReadMe-Swedish.txt
 PATCH: [ 1510600 ] Updated MergeSwedish.rc file for 2.5.5.1+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 BUG: [ 1483242 ] Needless resource file 'MergeSwedish_LastTranslation.rc'?
  Remove unneeded file
  Removed: Src/Languages/Swedish: MergeSwedish_LastTranslation.rc
 BUG: [ 1489034 ] Src/Common/LanguageSelect.rc unused?
  Remove unneeded file
  Removed: Src/Common/LanguageSelect.rc
 Remove unused files (language.h & language.c)
  Removed: Src: language.c language.h

2006-06-21 WinMerge experimental release 2.5.5.1 (cvs)

2006-06-21 Kimmo
 PATCH: [ 1509505 ] Manual: new compare method and options export/import
  Docs/Users/Manual: Configuration.xml
 Bump manual revision to 1.2.4
  Docs/Users/Manual: WinMerge_help.xml
 Bump ShellExtension version to 1.7.2
  ShellExtension: ShellExtension.rc

2006-06-20 Kimmo
 BUG: [ 1505763 ] Crash after closing file compare window
  Src: MergeEditView.cpp
 PATCH: [ 1508865 ] Improve error handling for loading file filters
  Src: FileFilterHelper.cpp FileFilterMgr.cpp FileFilterMgr.h FileFiltersDlg.cpp
   FileFiltersDlg.h
 PATCH: [ 1508898 ] Show binary as one of EOL types
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1506184 ] Polish translation update for WM 2.5.4.0
  Submitted by dr_prozac
   Src/Languages/Polish: MergePolish.rc
 PATCH:[ 1509495 ] Polish translation for ShellExtension
  Submitted by dr_prozac
  ShellExtension/Languages: ShellExtensionPolish.rc

2006-06-19 Gal
 RFE: [ 1499245 ] Ruby Syntax Highlighting
  Src: Merge.dsp