@@ -6,6 +6,8 @@ Add new items to top.
  PATCH: [ 1512708 ] Fix compile with VS2005
   Also additional cleanup for CCrystalTextView::GetMarginWidth()
   Src/editlib: ccrystaltextview.cpp ccrystaltextview.h
+ PATCH: [ 1512726 ] Fix combining filesize from two values
+  Src: DiffFileInfo.cpp DirScan.cpp FileInfo.cpp FileInfo.h
 
 2006-06-26 Kimmo
  PATCH: [ 1510596 ] Updated Readme-Swedish.txt
